# previsao-inadimplencia

./: gerar_previsao.py  previsao-inadimplencia.ipynb  pyproject.toml  readme.md  readmePortugues.md
excel/: resultado.xlsx
html/: Balanceamento.html  CIDADE_CLIENTE_INADIMPLENTE_COBRANCA.html  Correlacao.html  ESTADO_CLIENTE.html  ESTADO_CLIENTE_INADIMPLENTE_COBRANCA.html  FAIXA_IDADE_DATA_ASSINATURA_CONTRATO_INADIMPLENTE_COBRANCA.html  FAIXA_IDADE_DATA_ASSINATURA_CONTRATO_PZ_FINANCIAMENTO.html  FAIXA_VALOR_FINANCIAMENTO_FAIXA_VALOR_PARCELA.html  FAIXA_VALOR_FINANCIAMENTO_INADIMPLENTE_COBRANCA.html  FAIXA_VALOR_FINANCIAMENTO_QT_DIAS_MEDIA_ATRASO.html  FAIXA_VALOR_PARCELA_INADIMPLENTE_COBRANCA.html  FAIXA_VL_TOTAL_PC_PAGAS_INADIMPLENTE_COBRANCA.html  INADIMPLENTE_COBRANCA_INADIMPLENTE_COBRANCA.html  Importancia_Variaveis.html  PZ_FINANCIAMENTO_INADIMPLENTE_COBRANCA.html  PZ_FINANCIAMENTO_TAXA_AO_ANO.html  QT_DIAS_MAX_ATRASO_INADIMPLENTE_COBRANCA.html  QT_DIAS_MEDIA_ATRASO_INADIMPLENTE_COBRANCA.html  QT_DIAS_MIN_ATRASO_INADIMPLENTE_COBRANCA.html  QT_DIAS_PRIM_PC_ATRASO_INADIMPLENTE_COBRANCA.html  QT_PC_ATRASO_INADIMPLENTE_COBRANCA.html  QT_PC_ATRASO_QT_TOTAL_PC_PAGAS.html  QT_PC_PAGA_EM_DIA_INADIMPLENTE_COBRANCA.html  QT_TOTAL_PC_PAGAS_INADIMPLENTE_COBRANCA.html  RENDA_MENSAL_CLIENTE.html  RENDA_MENSAL_CLIENTE_FAIXA_ETARIA.html  RENDA_MENSAL_CLIENTE_INADIMPLENTE_COBRANCA.html  RENDA_MENSAL_CLIENTE_QT_DIAS_MAX_ATRASO.html  TAXA_AO_ANO_INADIMPLENTE_COBRANCA.html
modelo/: modelo.pk
